[package]
name = "mixin-sdk-rs"
version = "0.0.4"
edition = "2024"
authors = ["Larsson"]
description = "Mixin SDK for Rust"
repository = "https://github.com/lixvyang/mixin_sdk_rs"
license = "Apache-2.0"
readme = "README.md"
keywords = ["mixin", "sdk", "rust"]

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.7", features = ["v4"] }
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3.1"
base64 = "0.22.1"
ring = "0.17.14"
thiserror = "2.0.12"
http = "1.1.0"
md5 = "0.7"
url = "2.5.0"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
curve25519-dalek = "4"
rand = "0.8"
x25519-dalek = "2"

[profile.release]
lto = true
strip = true
